# supermailer

./: .gitignore  Cargo.toml  README  bun.lockb  leptosfmt.toml  package.json  tailwind.config.js
.github/workflows/: terraform.yml
inbox/: Cargo.toml  input_ses.json
inbox/src/: main.rs
infra/: acm.tf  cloudfront.tf  email-setup.tf  lambda_assume_role_policy.json  lambda_policy.json  main.tf  route53.tf  s3.tf
src/: api.rs  api_types.rs  app.rs  fileserv.rs  lib.rs  main.rs  state.rs
src/ui/: components.rs  home.rs  mail.rs  mod.rs
src/ui/components/: badge.rs  card.rs  input.rs  switch.rs
style/: tailwind.css
