[package]
name = "mailer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

aws-config = "0.55.0"
aws-sdk-config = "0.25.1"
aws-sdk-s3 = "0.28.0"
serde_json = "1"
urlencoding = "2.1.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
axum = "0.6.18"
dotenvy = "0.15.6"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow = "1.0.66"
mail-parser = "0.8.2"
