[package]
name = "inbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

aws-config = "1.1.8"
aws-sdk-config = "0.25.1"
aws-sdk-dynamodb = "1.18.0"
serde_json = "1"
lambda_runtime = "0.8.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
aws_lambda_events = "0.15.0"
futures = "0.3.17"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }